--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      </div>
      <button class=addOption>Add</button>
    </div>
+   <div class=resultsection></div>
    <button>GO!</button>
  </body>
 </html>
