Enabled java-script

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
    </div>
    <div class=resultsection></div>
    <button>GO!</button>
+   <script src=https://code.jquery.com/jquery-3.3.1.min.js></script>
  </body>
 </html>
